--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
+    "react-html-parser": "^2.0.2",
     "react-i18next": "^12.2.2",
     "react-lazyload": "^3.2.0",
     "react-lightgallery": "^0.9.0",
@@ -69,6 +70,7 @@
     "@types/lodash": "^4.14.194",
     "@types/node": "18.16.9",
     "@types/react": "18.2.0",
+    "@types/react-html-parser": "^2.0.6",
     "@types/react-lazyload": "^3.2.0",
     "@types/uuid": "^9.0.1",
     "autoprefixer": "^10.4.16",
